# teeworlds

./: .gitmodules  CMakeLists.txt
.github/workflows/: build.yaml
src/engine/: kernel.h  server.h
src/engine/server/: register.h  server.cpp  server.h
src/engine/shared/: engine.cpp  kernel.cpp  mapchecker.cpp
src/game/: collision.cpp  collision.h  gamecore.cpp  variables.h  version.h
src/game/server/: entity.h  gamecontext.cpp  gamecontext.h  gamecontroller.cpp  gamecontroller.h  gameworld.cpp  player.cpp
src/game/server/entities/: character.cpp  character.h
